// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bwzfXH Rlnso"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-htpNat ddoEOV"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <Button
                className="sc-bxivhb cGNTxG"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                onClick={[Function]}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={Object {}}
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "hoverColor": "#c0c0c0",
                    }
                  }
                >
                  <styled.div
                    className="ui-button ripple sc-bxivhb cGNTxG"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button ripple sc-bxivhb cGNTxG sc-bdVaJa sMRYP"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#004358",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "hoverColor": "#c0c0c0",
                            }
                          }
                        >
                          <Icon__FontAwesome
                            className="ui-icon fa fa-fw fa-bomb"
                            sizing="normal"
                            style={Object {}}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                              style={Object {}}
                            />
                          </Icon__FontAwesome>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#c0c0c0",
    }
  }
>
  <styled.div
    className="ui-button-circle test-class"
  >
    <styled.div
      height="24px"
      width="24px"
    >
      <Styled(Button)
        className="test-class"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={
          Object {
            "borderColor": "#000000",
          }
        }
        testing={true}
        theme={Object {}}
        visible={true}
        width=""
        xcss={null}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bwzfXH Rlnso"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-htpNat ddoEOV"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              className=""
              contentEditable={false}
              direction="right"
              disabled={true}
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <Button
                className="sc-bxivhb cGNTxG"
                contentEditable={false}
                direction="right"
                disabled={true}
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                onClick={[Function]}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={Object {}}
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "hoverColor": "#c0c0c0",
                    }
                  }
                >
                  <styled.div
                    className="ui-button sc-bxivhb cGNTxG"
                    disabled={true}
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button sc-bxivhb cGNTxG sc-bdVaJa bktKeY"
                      disabled={true}
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#004358",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "hoverColor": "#c0c0c0",
                            }
                          }
                        >
                          <Icon__FontAwesome
                            className="ui-icon fa fa-fw fa-bomb"
                            sizing="normal"
                            style={Object {}}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                              style={Object {}}
                            />
                          </Icon__FontAwesome>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={Object {}}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bwzfXH Rlnso"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-htpNat ddoEOV"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={Object {}}
              visible={false}
              width=""
              xcss={null}
            >
              <Button
                className="sc-bxivhb cGNTxG"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                onClick={[Function]}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={Object {}}
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "hoverColor": "#c0c0c0",
                    }
                  }
                >
                  <styled.div
                    className="ui-button ripple sc-bxivhb cGNTxG"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={false}
                  >
                    <div
                      className="ui-button ripple sc-bxivhb cGNTxG sc-bdVaJa fODxMa"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#004358",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "hoverColor": "#c0c0c0",
                            }
                          }
                        >
                          <Icon__FontAwesome
                            className="ui-icon fa fa-fw fa-bomb"
                            sizing="normal"
                            style={Object {}}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                              style={Object {}}
                            />
                          </Icon__FontAwesome>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "borderColor": "#000000",
  },
  "testing": true,
  "theme": Object {},
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
